--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -2,9 +2,16 @@
 # Copy this file to ".streamlit/secrets.toml" and replace with your actual credentials
 # NEVER commit the actual secrets.toml file to version control
 
+# Original SQL Server direct connection settings
 [sql]
 server = "your-server-name.database.windows.net"  # SQL Server instance name
 database = "YourDatabaseName"                     # Database name
 username = "your_username"                        # SQL Server username
 password = "your_secure_password"                 # SQL Server password
+
+# API proxy connection settings (for app_api.py)
+[api]
+url = "http://your-api-service-url:8000"          # URL of your FastAPI service
+username = "admin"                                # API authentication username
+password = "password"                             # API authentication password
 
